created cart, wishlist and extensively modify order page

--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ ul .nav-link {
 }
 
 /* BATHING STOCK PAGE */
-.dark-brownish{
+/* .dark-brownish{
   background-color: #AD884D;
 }
 .brown-btn:hover{
@@ -519,7 +519,7 @@ ul .nav-link {
 
 .color-brownish{
   color: #AD884D;
-}
+} */
 
 .skewed-text{
   background-color: #E1E1E1;
